# HandwrittenDigitsClassificationKNN

./: README.md
C++/: CMakeLists.txt  ImageData.cpp  ImageData.h  main.cpp  readData.cpp  readData.h
Julia/: mnist.jl
